--- a/English.lproj/HistoryView.xib
+++ b/English.lproj/HistoryView.xib
@@ -11,10 +11,11 @@
       <string key="NS.object.0">851</string>
     </object>
     <array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
-      <integer value="584"/>
-      <integer value="850"/>
-      <integer value="861"/>
       <integer value="843"/>
+      <integer value="861"/>
+      <integer value="528"/>
+      <integer value="850"/>
+      <integer value="584"/>
     </array>
     <array key="IBDocument.PluginDependencies">
       <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -34,18 +35,19 @@
         <bool key="NSSharedInstance">YES</bool>
       </object>
       <object class="NSView" id="945562250">
-        <nil key="NSNextResponder"/>
+        <reference key="NSNextResponder"/>
         <int key="NSvFlags">256</int>
         <array class="NSMutableArray" key="NSSubviews">
           <object class="NSSplitView" id="470152575">
             <reference key="NSNextResponder" ref="945562250"/>
             <int key="NSvFlags">274</int>
-            <string key="NSFrame">{{0, -1}, {822, 634}}</string>
+            <string key="NSFrame">{{0, -1}, {822, 633}}</string>
             <reference key="NSSuperview" ref="945562250"/>
             <int key="NSDividerStyle">2</int>
           </object>
         </array>
         <string key="NSFrameSize">{822, 631}</string>
+        <reference key="NSSuperview"/>
       </object>
       <object class="NSMenu" id="886653824">
         <string key="NSTitle"/>
@@ -1148,13 +1150,13 @@
                     <reference key="NSNextResponder" ref="421810083"/>
                     <int key="NSvFlags">274</int>
                     <array class="NSMutableArray" key="NSSubviews">
-                      <object class="NSButton" id="54953186">
+                      <object class="NSButton" id="759572240">
                         <reference key="NSNextResponder" ref="734468445"/>
-                        <int key="NSvFlags">265</int>
-                        <string key="NSFrame">{{4, -2}, {32, 28}}</string>
+                        <int key="NSvFlags">268</int>
+                        <string key="NSFrame">{{2, -2}, {34, 26}}</string>
                         <reference key="NSSuperview" ref="734468445"/>
                         <bool key="NSEnabled">YES</bool>
-                        <object class="NSButtonCell" key="NSCell" id="87353079">
+                        <object class="NSButtonCell" key="NSCell" id="525663531">
                           <int key="NSCellFlags">-2080244224</int>
                           <int key="NSCellFlags2">134217728</int>
                           <string key="NSContents"/>
@@ -1163,6 +1165,30 @@
                             <double key="NSSize">13</double>
                             <int key="NSfFlags">1040</int>
                           </object>
+                          <reference key="NSControlView" ref="759572240"/>
+                          <int key="NSButtonFlags">-2033434369</int>
+                          <int key="NSButtonFlags2">162</int>
+                          <object class="NSCustomResource" key="NSNormalImage">
+                            <string key="NSClassName">NSImage</string>
+                            <string key="NSResourceName">ForceUpdate</string>
+                          </object>
+                          <string key="NSAlternateContents"/>
+                          <string key="NSKeyEquivalent"/>
+                          <int key="NSPeriodicDelay">400</int>
+                          <int key="NSPeriodicInterval">75</int>
+                        </object>
+                      </object>
+                      <object class="NSButton" id="54953186">
+                        <reference key="NSNextResponder" ref="734468445"/>
+                        <int key="NSvFlags">265</int>
+                        <string key="NSFrame">{{35, -3}, {32, 28}}</string>
+                        <reference key="NSSuperview" ref="734468445"/>
+                        <bool key="NSEnabled">YES</bool>
+                        <object class="NSButtonCell" key="NSCell" id="87353079">
+                          <int key="NSCellFlags">-2080244224</int>
+                          <int key="NSCellFlags2">134217728</int>
+                          <string key="NSContents"/>
+                          <reference key="NSSupport" ref="1034810104"/>
                           <reference key="NSControlView" ref="54953186"/>
                           <int key="NSButtonFlags">-2030288641</int>
                           <int key="NSButtonFlags2">34</int>
@@ -1177,11 +1203,11 @@
                         </object>
                       </object>
                     </array>
-                    <string key="NSFrame">{{1, 1}, {37, 24}}</string>
+                    <string key="NSFrame">{{1, 1}, {68, 21}}</string>
                     <reference key="NSSuperview" ref="421810083"/>
                   </object>
                 </array>
-                <string key="NSFrame">{{766, -1}, {39, 26}}</string>
+                <string key="NSFrame">{{735, 0}, {70, 23}}</string>
                 <reference key="NSSuperview" ref="951636192"/>
                 <string key="NSOffsets">{0, 0}</string>
                 <object class="NSTextFieldCell" key="NSTitleCell">
@@ -2126,6 +2152,14 @@
           </object>
           <int key="connectionID">1060</int>
         </object>
+        <object class="IBConnectionRecord">
+          <object class="IBActionConnection" key="connection">
+            <string key="label">forceReinitilizeHistoryViews:</string>
+            <reference key="source" ref="945562250"/>
+            <reference key="destination" ref="759572240"/>
+          </object>
+          <int key="connectionID">1069</int>
+        </object>
       </array>
       <object class="IBMutableOrderedSet" key="objectRecords">
         <array key="orderedObjects">
@@ -2466,6 +2500,7 @@
             <reference key="object" ref="421810083"/>
             <array class="NSMutableArray" key="children">
               <reference ref="54953186"/>
+              <reference ref="759572240"/>
             </array>
             <reference key="parent" ref="957515287"/>
             <string key="objectName">Divider1Buttons</string>
@@ -2949,6 +2984,19 @@
             <reference key="object" ref="31365053"/>
             <reference key="parent" ref="385668343"/>
           </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">1067</int>
+            <reference key="object" ref="759572240"/>
+            <array class="NSMutableArray" key="children">
+              <reference ref="525663531"/>
+            </array>
+            <reference key="parent" ref="421810083"/>
+          </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">1068</int>
+            <reference key="object" ref="525663531"/>
+            <reference key="parent" ref="759572240"/>
+          </object>
         </array>
       </object>
       <dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -2994,6 +3042,19 @@
         <string key="1064.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="1065.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="1066.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+        <object class="NSMutableDictionary" key="1067.IBAttributePlaceholdersKey">
+          <string key="NS.key.0">ToolTip</string>
+          <object class="IBToolTipAttribute" key="NS.object.0">
+            <string key="name">ToolTip</string>
+            <reference key="object" ref="759572240"/>
+            <string key="toolTip">Force Refresh</string>
+          </object>
+        </object>
+        <string key="1067.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+        <object class="NSAffineTransform" key="1067.IBViewBoundsToFrameTransform">
+          <bytes key="NSTransformStruct">P4AAAL+AAAAAAAAAwbAAAA</bytes>
+        </object>
+        <string key="1068.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="145.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="344.IBEditorWindowLastContentRect">{{970, 324}, {256, 323}}</string>
         <string key="344.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3099,7 +3160,7 @@
         <string key="857.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="858.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="859.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-        <string key="861.IBEditorWindowLastContentRect">{{126, 972}, {824, 24}}</string>
+        <string key="861.IBEditorWindowLastContentRect">{{85, 966}, {824, 24}}</string>
         <string key="861.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <object class="NSAffineTransform" key="861.IBViewBoundsToFrameTransform"/>
         <string key="862.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3165,7 +3226,7 @@
       <nil key="activeLocalization"/>
       <dictionary class="NSMutableDictionary" key="localizations"/>
       <nil key="sourceID"/>
-      <int key="maxID">1066</int>
+      <int key="maxID">1069</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3173,6 +3234,7 @@
           <string key="className">HistoryView</string>
           <string key="superclassName">NSView</string>
           <dictionary class="NSMutableDictionary" key="actions">
+            <string key="forceReinitilizeHistoryViews:">id</string>
             <string key="historyMenuAddLabelToChosenRevision:">id</string>
             <string key="historyMenuDiffAllToChosenRevision:">id</string>
             <string key="historyMenuDiffSelectedRevisions:">id</string>
@@ -3200,6 +3262,10 @@
             <string key="toolbarRevertFiles:">id</string>
           </dictionary>
           <dictionary class="NSMutableDictionary" key="actionInfosByName">
+            <object class="IBActionInfo" key="forceReinitilizeHistoryViews:">
+              <string key="name">forceReinitilizeHistoryViews:</string>
+              <string key="candidateClassName">id</string>
+            </object>
             <object class="IBActionInfo" key="historyMenuAddLabelToChosenRevision:">
               <string key="name">historyMenuAddLabelToChosenRevision:</string>
               <string key="candidateClassName">id</string>
@@ -4180,6 +4246,7 @@
           <string key="className">Sidebar</string>
           <string key="superclassName">NSOutlineView</string>
           <dictionary class="NSMutableDictionary" key="actions">
+            <string key="forceRefreshOfSidebarData:">id</string>
             <string key="mainMenuAddNewSidebarGroupItem:">id</string>
             <string key="mainMenuCloneRepository:">id</string>
             <string key="mainMenuConfigureLocalRepositoryRef:">id</string>
@@ -4191,6 +4258,10 @@
             <string key="reloadSidebarData:">id</string>
           </dictionary>
           <dictionary class="NSMutableDictionary" key="actionInfosByName">
+            <object class="IBActionInfo" key="forceRefreshOfSidebarData:">
+              <string key="name">forceRefreshOfSidebarData:</string>
+              <string key="candidateClassName">id</string>
+            </object>
             <object class="IBActionInfo" key="mainMenuAddNewSidebarGroupItem:">
               <string key="name">mainMenuAddNewSidebarGroupItem:</string>
               <string key="candidateClassName">id</string>
@@ -5120,6 +5191,7 @@
       <string key="DiffButton">{17, 15}</string>
       <string key="DividerBackground24">{1, 24}</string>
       <string key="DividerThumb">{11, 10}</string>
+      <string key="ForceUpdate">{16, 16}</string>
       <string key="NSAddTemplate">{8, 8}</string>
       <string key="NSMenuCheckmark">{9, 8}</string>
       <string key="NSMenuMixedState">{7, 2}</string>
